# uran

./: .gitignore  README.md  docker-compose.yml
.github/: pull_request_template.md
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_controlled_manual_workflow.down.sql  0002_controlled_manual_workflow.up.sql  0003_fail_reasons_catalog.down.sql  0003_fail_reasons_catalog.up.sql  README.md
backend/src/: main.rs
docs/ai/: 01-architecture.md  02-database.md  03-coding-rules.md
docs/ai/prompts/: create_rust_handler.md  generate_react_component.md
docs/process/: manual-testing-regulation.md
frontend/: package-lock.json  package.json
frontend/public/: ip-camera-testing.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/common/: FailReasonSelect.tsx  StatusChip.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/runs/: RunChecklist.tsx  RunsTable.tsx
